@@ -6,13 +6,14 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.fasterxml.jackson.dataformat.yaml.YAMLMapper;
 import io.github.honhimw.spring.annotation.resolver.TextParam;
-import io.github.honhimw.spring.util.GZipUtils;
+import io.github.honhimw.util.GZipUtils;
 import jakarta.servlet.http.HttpServletRequest;
+import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.apache.commons.lang3.Validate;
 import org.springframework.core.MethodParameter;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
+import org.springframework.util.Assert;
 
 import java.io.IOException;
 import java.nio.charset.Charset;
@@ -49,10 +50,10 @@ public class YamlJacksonNodeCustomizer implements JacksonNodeCustomizer {
             return;
         }
         TextParam parameterAnnotation = parameter.getParameterAnnotation(TextParam.class);
-        Validate.validState(parameterAnnotation != null, "argument resolver annotation should not be null.");
+        Assert.state(parameterAnnotation != null, "argument resolver annotation should not be null.");
 
         try {
-            byte[] bytes = servletRequest.getInputStream().readAllBytes();
+            byte[] bytes = IOUtils.toByteArray(servletRequest.getInputStream());
             bytes = tryDecompressGzip(parameterAnnotation, servletRequest, bytes);
             Charset charset = Optional.of(servletRequest.getCharacterEncoding())
                 .map(Charset::forName)
